syntax = "proto3";

package pinguin;

option go_package = "github.com/temirov/pinguin/pkg/grpcapi;grpcapi";
import "google/protobuf/timestamp.proto";

// Enumeration for notification type.
enum NotificationType {
  EMAIL = 0;
  SMS = 1;
}

// Enumeration for status.
enum Status {
  QUEUED = 0;
  SENT = 1;
  FAILED = 2;
  UNKNOWN = 3;
}

// Request to send a notification.
message NotificationRequest {
  NotificationType notification_type = 1;
  string recipient = 2;
  string subject = 3; // Optional for SMS.
  string message = 4;
  google.protobuf.Timestamp scheduled_time = 5;
}

// Response returned after sending (or when retrieving) a notification.
message NotificationResponse {
  string notification_id = 1;
  NotificationType notification_type = 2;
  string recipient = 3;
  string subject = 4;
  string message = 5;
  Status status = 6;
  string provider_message_id = 7;
  int32 retry_count = 8;
  string created_at = 9;
  string updated_at = 10;
  google.protobuf.Timestamp scheduled_time = 11;
}

// Request for retrieving the status.
message GetNotificationStatusRequest {
  string notification_id = 1;
}

// NotificationService defines two RPC methods.
service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
  rpc GetNotificationStatus(GetNotificationStatusRequest) returns (NotificationResponse);
}
